k8s/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer-service-deployment
  labels:
    app: offer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: offer-service
  template:
    metadata:
      labels:
        app: offer-service
    spec:
      containers:
        - name: offer-service
          image: localhost:5001/offer-service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: offer-service
spec:
  selector:
    app: offer-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: localhost:5001/delivery-service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
  labels:
    app: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: localhost:5001/cart-service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
