k8s/cart-service-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cart-service-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cart-service.local`)
      kind: Rule
      services:
        - name: cart-service
          port: 80
