k8s/jaeger-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jaeger.local`)
      kind: Rule
      services:
        - name: jaeger-query
          port: 16686
